feat: add support to coupons
