# internal/provider/types/promo_code.go
@@ -1,0 +1,12 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type PromoCode struct {
+	Code          types.String `tfsdk:"code"`
+	HasUsageLimit types.Bool   `tfsdk:"has_usage_limit"`
+	ID            types.String `tfsdk:"id"`
+	UsageLimit    types.Number `tfsdk:"usage_limit"`
+}
